# pg-ii

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 544afe255498_add_post_views_table.py  a8b3535ff018_initial_schema.py
backend/app/: main.py
backend/app/api/: admin_analytics.py  admin_posts.py  auth.py  comments.py  posts.py  views.py
backend/app/core/: config.py  database.py  scheduler.py  security.py
backend/app/models/: __init__.py  comment.py  post.py  post_view.py
backend/app/schemas/: __init__.py  comment.py  post.py
frontend/: Dockerfile  cloudinary-loader.js  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.jsx
frontend/app/(public)/: layout.jsx  page.jsx
frontend/app/admin/: admin.module.scss  page.jsx
frontend/app/blog/: page.jsx
frontend/components/: ThemeProvider.jsx  ThemeToggle.jsx  ThemeToggle.module.scss
frontend/components/admin/: AdminAuthGuard.jsx  Sidebar.jsx  Sidebar.module.scss
frontend/components/blog/: CategoryFilter.jsx  CategoryFilter.module.scss  CommentSection.jsx  CommentSection.module.scss  PostCard.jsx  PostCard.module.scss  ViewTracker.jsx
frontend/components/icons/: SocialIcons.jsx
frontend/components/public/: Button.jsx  Button.module.scss  Container.jsx  Container.module.scss  HomeCTA.jsx  HomeCTA.module.scss  HomeHero.jsx  HomeHero.module.scss  HomeService.jsx  HomeServices.module.scss  PublicFooter.jsx  PublicHeader.jsx  (+8 more)
frontend/lib/: api.js
frontend/styles/: _mixins.scss  _variables.scss  globals.scss
(+17 files in other folders)
