[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.2",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.49",
]
